--- a/examples/notebooks/sft_tool_calling.ipynb
+++ b/examples/notebooks/sft_tool_calling.ipynb
@@ -429,19 +429,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "lSTqSH0HXTLH"
-   },
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "chat_template_path=str(Path(__file__).parent / \"tiny_aya_chat_template.jinja\"),"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "z_Rek3WueSqX"
@@ -495,10 +482,9 @@
     "    per_device_train_batch_size = 1,      # Batch size per GPU\n",
     "    gradient_accumulation_steps = 4,      # Effective batch size = 1 * 4 = 4\n",
     "    warmup_steps = 5,\n",
-    "    num_train_epochs = 3,                 # 3 full passes over the dataset\n",
     "    learning_rate = 2e-4,                 # Learning rate for the optimizer\n",
     "    optim = \"paged_adamw_8bit\",           # Optimizer\n",
-    "    chat_template_path=chat_template_path,\n",
+    "    chat_template_path= \"tiny_aya_chat_template.jinja\",  # Use the tool-aware chat template\n",
     "\n",
     "    # Logging / reporting\n",
     "    logging_steps=1,                      # Log training metrics every N steps\n",
@@ -1169,11 +1155,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User Query: What is the process for creating a new Jira project?\n",
+      "User Query: [{'content': 'What is the latest version of Node.js?', 'role': 'user'}]\n",
       "Predicted Output: <tool_call>\n",
       "<function=search_google>\n",
-      "<parameter=query>\n",
-      "How to create a new Jira project\n",
+      "<parameter=query>node.js latest version\n",
       "</parameter>\n",
       "</function>\n",
       "</tool_call>\n"
@@ -1212,20 +1197,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User Query: Explica en español qué significa la palabra japonesa 'ikigai' y da un ejemplo práctico.\n",
-      "Predicted Output: \n",
-      "La palabra japonesa **\"ikigai\"** (生き甲斐) significa **\"razón de ser\"** o **\"propósito de vida\"**. Se refiere a la combinación de lo que te apasiona, en lo que eres bueno, lo que puedes hacer bien y lo que el mundo necesita. Es un concepto filosófico que busca alinear tus habilidades, intereses y valores con tu vida diaria para encontrar satisfacción y significado.\n",
-      "\n",
-      "**Ejemplo práctico:**\n",
-      "Imagina a **Yumi**, una diseñadora gráfica que ama el arte, tiene habilidades técnicas, y le apasiona crear diseños sostenibles. Su **ikigai** podría ser **diseñar productos ecológicos para marcas éticas**. Esto le permite combinar su pasión por el arte, su talento y su deseo de contribuir a un mundo más sostenible, creando un propósito que le da sentido a su trabajo.\n",
-      "\n",
-      "En resumen, **ikigai** es encontrar lo que te hace sentir vivo y útil, alineando tus talentos con tus valores y el mundo que te rodea.\n",
-      "\n"
+      "User Query: [{'role': 'user', 'content': \"Explica en español qué significa la palabra japonesa 'ikigai' y da un ejemplo práctico.\"}]\n",
+      "Predicted Output: <tool_call>\n",
+      "<function=search_google>\n",
+      "<parameter=query>ikigai significado y ejemplo\n",
+      "</parameter>\n",
+      "</function>\n",
+      "</tool_call>\n"
      ]
     }
    ],
    "source": [
     "user_content = \"Explica en español qué significa la palabra japonesa 'ikigai' y da un ejemplo práctico.\" # Spanish question\n",
+    "user_content = [{\"role\": \"user\", \"content\": user_content}]\n",
     "\n",
     "print(f\"User Query: {user_content}\")\n",
     "\n",
